[package]
name = "xdg-user-macros"
version = "0.1.0"
authors = ["Joseph R. Quinn <quinn.josephr@protonmail.com>"]
homepage = "https://github.com/quinnjr/xdg-home-macros"
keywords = ["xdg", "directory", "xdg base", "macro", "macros"]
license = "ISC"
categories = ["filesystem"]

[badges]
travis-ci = { repository = "quinnjr/xdg-user-macros", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
libc = "0.2.40"
